@startuml

title __GAMEOBJECTS's Class Diagram__\n

  namespace com.javarush.games.spaceinvaders {
    namespace gameobjects {
      class com.javarush.games.spaceinvaders.gameobjects.Boss {
          - frameCount : int
          + Boss()
          + fire()
          + kill()
          + nextFrame()
      }
    }
  }
  

  namespace com.javarush.games.spaceinvaders {
    namespace gameobjects {
      class com.javarush.games.spaceinvaders.gameobjects.Bullet {
          + isAlive : boolean
          - dy : int
          + Bullet()
          + kill()
          + move()
      }
    }
  }
  

  namespace com.javarush.games.spaceinvaders {
    namespace gameobjects {
      class com.javarush.games.spaceinvaders.gameobjects.EnemyFleet {
          {static} - COLUMNS_COUNT : int
          {static} - ROWS_COUNT : int
          {static} - STEP : int
          - ships : List<EnemyShip>
          + EnemyFleet()
          + deleteHiddenShips()
          + draw()
          + fire()
          + getBottomBorder()
          + getShipsCount()
          + move()
          + verifyHit()
          - createShips()
          - getLeftBorder()
          - getRightBorder()
          - getSpeed()
      }
    }
  }
  

  namespace com.javarush.games.spaceinvaders {
    namespace gameobjects {
      class com.javarush.games.spaceinvaders.gameobjects.EnemyShip {
          + score : int
          + EnemyShip()
          + fire()
          + kill()
          + move()
      }
    }
  }
  

  namespace com.javarush.games.spaceinvaders {
    namespace gameobjects {
      class com.javarush.games.spaceinvaders.gameobjects.GameObject {
          + height : int
          + matrix : int[][]
          + width : int
          + x : double
          + y : double
          + GameObject()
          + draw()
          + isCollision()
          + setMatrix()
          - isCollision()
      }
    }
  }
  

  namespace com.javarush.games.spaceinvaders {
    namespace gameobjects {
      class com.javarush.games.spaceinvaders.gameobjects.PlayerShip {
          + PlayerShip()
          + fire()
          + getDirection()
          + kill()
          + move()
          + setDirection()
          + verifyHit()
          + win()
      }
    }
  }
  

  namespace com.javarush.games.spaceinvaders {
    namespace gameobjects {
      class com.javarush.games.spaceinvaders.gameobjects.Ship {
          + isAlive : boolean
          - frameIndex : int
          - frames : List<int[][]>
          - loopAnimation : boolean
          + Ship()
          + draw()
          + fire()
          + isVisible()
          + kill()
          + nextFrame()
          + setAnimatedView()
          + setStaticView()
      }
    }
  }
  

  namespace com.javarush.games.spaceinvaders {
    namespace gameobjects {
      class com.javarush.games.spaceinvaders.gameobjects.Star {
          {static} - STAR_SIGN : String
          + Star()
          + draw()
      }
    }
  }
  

  com.javarush.games.spaceinvaders.gameobjects.Boss -up-|> com.javarush.games.spaceinvaders.gameobjects.EnemyShip
  com.javarush.games.spaceinvaders.gameobjects.Bullet -up-|> com.javarush.games.spaceinvaders.gameobjects.GameObject
  com.javarush.games.spaceinvaders.gameobjects.EnemyFleet o-- com.javarush.games.spaceinvaders.Direction : direction
  com.javarush.games.spaceinvaders.gameobjects.EnemyShip -up-|> com.javarush.games.spaceinvaders.gameobjects.Ship
  com.javarush.games.spaceinvaders.gameobjects.PlayerShip -up-|> com.javarush.games.spaceinvaders.gameobjects.Ship
  com.javarush.games.spaceinvaders.gameobjects.PlayerShip o-- com.javarush.games.spaceinvaders.Direction : direction
  com.javarush.games.spaceinvaders.gameobjects.Ship -up-|> com.javarush.games.spaceinvaders.gameobjects.GameObject
  com.javarush.games.spaceinvaders.gameobjects.Star -up-|> com.javarush.games.spaceinvaders.gameobjects.GameObject


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
